Added Read Table Path Finished Call Path
